1s2020/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    UMINUS
    UPLUS
    UTIMES

Grammar

Rule 0     S' -> program
Rule 1     program -> global_declaration_list
Rule 2     global_declaration_list -> global_declaration
Rule 3     global_declaration_list -> global_declaration_list global_declaration
Rule 4     global_declaration -> function_definition
Rule 5     global_declaration -> declaration
Rule 6     function_definition -> declarator declaration_list compound_statement
Rule 7     function_definition -> type_specifier declarator declaration_list compound_statement
Rule 8     declaration_list -> declaration
Rule 9     declaration_list -> declaration_list declaration
Rule 10    identifier -> ID
Rule 11    type_specifier -> VOID
Rule 12    type_specifier -> CHAR
Rule 13    type_specifier -> INT
Rule 14    type_specifier -> FLOAT
Rule 15    pointer -> TIMES
Rule 16    pointer -> TIMES pointer
Rule 17    declarator -> direct_declarator
Rule 18    declarator -> pointer direct_declarator
Rule 19    direct_declarator -> identifier
Rule 20    direct_declarator -> declarator
Rule 21    direct_declarator -> direct_declarator LBRACKET constant_expression_opt RBRACKET
Rule 22    direct_declarator -> direct_declarator LPAREN parameter_list RPAREN
Rule 23    direct_declarator -> direct_declarator LPAREN identifier RPAREN
Rule 24    constant_expression_opt -> constant_expression
Rule 25    constant_expression_opt -> empty
Rule 26    constant_expression -> binary_expression
Rule 27    binary_expression -> cast_expression
Rule 28    binary_expression -> binary_expression TIMES binary_expression
Rule 29    binary_expression -> binary_expression DIVIDE binary_expression
Rule 30    binary_expression -> binary_expression MOD binary_expression
Rule 31    binary_expression -> binary_expression PLUS binary_expression
Rule 32    binary_expression -> binary_expression MINUS binary_expression
Rule 33    binary_expression -> binary_expression LT binary_expression
Rule 34    binary_expression -> binary_expression LE binary_expression
Rule 35    binary_expression -> binary_expression GT binary_expression
Rule 36    binary_expression -> binary_expression GE binary_expression
Rule 37    binary_expression -> binary_expression EQ binary_expression
Rule 38    binary_expression -> binary_expression NQ binary_expression
Rule 39    binary_expression -> binary_expression AND binary_expression
Rule 40    binary_expression -> binary_expression OR binary_expression
Rule 41    cast_expression -> unary_expression
Rule 42    cast_expression -> LPAREN type_specifier RPAREN cast_expression
Rule 43    unary_expression -> postfix_expression
Rule 44    unary_expression -> INCREASE unary_expression
Rule 45    unary_expression -> DECREASE unary_expression
Rule 46    unary_expression -> unary_operator cast_expression
Rule 47    postfix_expression -> primary_expression
Rule 48    postfix_expression -> postfix_expression LBRACKET expression RBRACKET
Rule 49    postfix_expression -> postfix_expression LPAREN argument_expression_opt RPAREN
Rule 50    postfix_expression -> postfix_expression INCREASE
Rule 51    postfix_expression -> postfix_expression DECREASE
Rule 52    argument_expression_opt -> argument_expression
Rule 53    argument_expression_opt -> empty
Rule 54    primary_expression -> identifier
Rule 55    primary_expression -> constant
Rule 56    primary_expression -> STRING
Rule 57    primary_expression -> expression
Rule 58    constant -> INT_CONST
Rule 59    constant -> CHAR_CONST
Rule 60    constant -> FLOAT_CONST
Rule 61    expression -> assignment_expression
Rule 62    expression -> expression COMMA assignment_expression
Rule 63    argument_expression -> assignment_expression
Rule 64    argument_expression -> argument_expression COMMA assignment_expression
Rule 65    assignment_expression -> binary_expression
Rule 66    assignment_expression -> unary_expression assignment_operator assignment_expression
Rule 67    assignment_operator -> EQUALS
Rule 68    assignment_operator -> EQTIMES
Rule 69    assignment_operator -> EQDIV
Rule 70    assignment_operator -> EQMOD
Rule 71    assignment_operator -> EQPLUS
Rule 72    assignment_operator -> EQMINUS
Rule 73    unary_operator -> ADDRESS
Rule 74    unary_operator -> TIMES
Rule 75    unary_operator -> PLUS
Rule 76    unary_operator -> MINUS
Rule 77    unary_operator -> NOT
Rule 78    parameter_list -> parameter_declaration
Rule 79    parameter_list -> parameter_list COMMA parameter_declaration
Rule 80    parameter_declaration -> type_specifier declarator
Rule 81    declaration -> type_specifier init_declarator_list_opt SEMI
Rule 82    init_declarator_list_opt -> init_declarator_list
Rule 83    init_declarator_list_opt -> empty
Rule 84    init_declarator_list -> init_declarator
Rule 85    init_declarator_list -> init_declarator_list COMMA init_declarator
Rule 86    init_declarator -> declarator
Rule 87    init_declarator -> declarator EQUALS initializer
Rule 88    initializer -> assignment_expression
Rule 89    initializer -> initializer_list
Rule 90    initializer -> initializer_list COMMA
Rule 91    initializer_list -> initializer
Rule 92    initializer_list -> initializer_list COMMA initializer
Rule 93    compound_statement -> declaration_list statement_list
Rule 94    statement_list -> statement
Rule 95    statement_list -> statement_list statement
Rule 96    statement -> expression_statement
Rule 97    statement -> compound_statement
Rule 98    statement -> selection_statement
Rule 99    statement -> iteration_statement
Rule 100   statement -> jump_statement
Rule 101   statement -> assert_statement
Rule 102   statement -> print_statement
Rule 103   statement -> read_statement
Rule 104   expression_statement -> expression_opt SEMI
Rule 105   expression_opt -> expression
Rule 106   expression_opt -> empty
Rule 107   selection_statement -> IF LPAREN expression RPAREN statement
Rule 108   selection_statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 109   iteration_statement -> WHILE LPAREN expression RPAREN statement
Rule 110   iteration_statement -> FOR LPAREN expression_opt SEMI expression_opt SEMI expression_opt RPAREN statement
Rule 111   iteration_statement -> FOR LPAREN declaration SEMI expression_opt SEMI expression_opt RPAREN statement
Rule 112   jump_statement -> BREAK
Rule 113   jump_statement -> RETURN expression_opt SEMI
Rule 114   assert_statement -> ASSERT expression SEMI
Rule 115   print_statement -> PRINT LPAREN expression_opt RPAREN SEMI
Rule 116   read_statement -> READ LPAREN argument_expression RPAREN SEMI
Rule 117   empty -> <empty>

Terminals, with rules where they appear

ADDRESS              : 73
AND                  : 39
ASSERT               : 114
BREAK                : 112
CHAR                 : 12
CHAR_CONST           : 59
COMMA                : 62 64 79 85 90 92
DECREASE             : 45 51
DIVIDE               : 29
ELSE                 : 108
EQ                   : 37
EQDIV                : 69
EQMINUS              : 72
EQMOD                : 70
EQPLUS               : 71
EQTIMES              : 68
EQUALS               : 67 87
FLOAT                : 14
FLOAT_CONST          : 60
FOR                  : 110 111
GE                   : 36
GT                   : 35
ID                   : 10
IF                   : 107 108
INCREASE             : 44 50
INT                  : 13
INT_CONST            : 58
LBRACKET             : 21 48
LE                   : 34
LPAREN               : 22 23 42 49 107 108 109 110 111 115 116
LT                   : 33
MINUS                : 32 76
MOD                  : 30
NOT                  : 77
NQ                   : 38
OR                   : 40
PLUS                 : 31 75
PRINT                : 115
RBRACKET             : 21 48
READ                 : 116
RETURN               : 113
RPAREN               : 22 23 42 49 107 108 109 110 111 115 116
SEMI                 : 81 104 110 110 111 111 113 114 115 116
STRING               : 56
TIMES                : 15 16 28 74
UMINUS               : 
UPLUS                : 
UTIMES               : 
VOID                 : 11
WHILE                : 109
error                : 

Nonterminals, with rules where they appear

argument_expression  : 52 64 116
argument_expression_opt : 49
assert_statement     : 101
assignment_expression : 61 62 63 64 66 88
assignment_operator  : 66
binary_expression    : 26 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 65
cast_expression      : 27 42 46
compound_statement   : 6 7 97
constant             : 55
constant_expression  : 24
constant_expression_opt : 21
declaration          : 5 8 9 111
declaration_list     : 6 7 9 93
declarator           : 6 7 20 80 86 87
direct_declarator    : 17 18 21 22 23
empty                : 25 53 83 106
expression           : 48 57 62 105 107 108 109 114
expression_opt       : 104 110 110 110 111 111 113 115
expression_statement : 96
function_definition  : 4
global_declaration   : 2 3
global_declaration_list : 1 3
identifier           : 19 23 54
init_declarator      : 84 85
init_declarator_list : 82 85
init_declarator_list_opt : 81
initializer          : 87 91 92
initializer_list     : 89 90 92
iteration_statement  : 99
jump_statement       : 100
parameter_declaration : 78 79
parameter_list       : 22 79
pointer              : 16 18
postfix_expression   : 43 48 49 50 51
primary_expression   : 47
print_statement      : 102
program              : 0
read_statement       : 103
selection_statement  : 98
statement            : 94 95 107 108 108 109 110 111
statement_list       : 93 95
type_specifier       : 7 42 80 81
unary_expression     : 41 44 45 66
unary_operator       : 46

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . global_declaration_list
    (2) global_declaration_list -> . global_declaration
    (3) global_declaration_list -> . global_declaration_list global_declaration
    (4) global_declaration -> . function_definition
    (5) global_declaration -> . declaration
    (6) function_definition -> . declarator declaration_list compound_statement
    (7) function_definition -> . type_specifier declarator declaration_list compound_statement
    (81) declaration -> . type_specifier init_declarator_list_opt SEMI
    (17) declarator -> . direct_declarator
    (18) declarator -> . pointer direct_declarator
    (11) type_specifier -> . VOID
    (12) type_specifier -> . CHAR
    (13) type_specifier -> . INT
    (14) type_specifier -> . FLOAT
    (19) direct_declarator -> . identifier
    (20) direct_declarator -> . declarator
    (21) direct_declarator -> . direct_declarator LBRACKET constant_expression_opt RBRACKET
    (22) direct_declarator -> . direct_declarator LPAREN parameter_list RPAREN
    (23) direct_declarator -> . direct_declarator LPAREN identifier RPAREN
    (15) pointer -> . TIMES
    (16) pointer -> . TIMES pointer
    (10) identifier -> . ID

    VOID            shift and go to state 10
    CHAR            shift and go to state 11
    INT             shift and go to state 12
    FLOAT           shift and go to state 13
    TIMES           shift and go to state 15
    ID              shift and go to state 16

    program                        shift and go to state 1
    global_declaration_list        shift and go to state 2
    global_declaration             shift and go to state 3
    function_definition            shift and go to state 4
    declaration                    shift and go to state 5
    declarator                     shift and go to state 6
    type_specifier                 shift and go to state 7
    direct_declarator              shift and go to state 8
    pointer                        shift and go to state 9
    identifier                     shift and go to state 14

state 1

    (0) S' -> program .



state 2

    (1) program -> global_declaration_list .
    (3) global_declaration_list -> global_declaration_list . global_declaration
    (4) global_declaration -> . function_definition
    (5) global_declaration -> . declaration
    (6) function_definition -> . declarator declaration_list compound_statement
    (7) function_definition -> . type_specifier declarator declaration_list compound_statement
    (81) declaration -> . type_specifier init_declarator_list_opt SEMI
    (17) declarator -> . direct_declarator
    (18) declarator -> . pointer direct_declarator
    (11) type_specifier -> . VOID
    (12) type_specifier -> . CHAR
    (13) type_specifier -> . INT
    (14) type_specifier -> . FLOAT
    (19) direct_declarator -> . identifier
    (20) direct_declarator -> . declarator
    (21) direct_declarator -> . direct_declarator LBRACKET constant_expression_opt RBRACKET
    (22) direct_declarator -> . direct_declarator LPAREN parameter_list RPAREN
    (23) direct_declarator -> . direct_declarator LPAREN identifier RPAREN
    (15) pointer -> . TIMES
    (16) pointer -> . TIMES pointer
    (10) identifier -> . ID

    $end            reduce using rule 1 (program -> global_declaration_list .)
    VOID            shift and go to state 10
    CHAR            shift and go to state 11
    INT             shift and go to state 12
    FLOAT           shift and go to state 13
    TIMES           shift and go to state 15
    ID              shift and go to state 16

    global_declaration             shift and go to state 17
    function_definition            shift and go to state 4
    declaration                    shift and go to state 5
    declarator                     shift and go to state 6
    type_specifier                 shift and go to state 7
    direct_declarator              shift and go to state 8
    pointer                        shift and go to state 9
    identifier                     shift and go to state 14

state 3

    (2) global_declaration_list -> global_declaration .

    VOID            reduce using rule 2 (global_declaration_list -> global_declaration .)
    CHAR            reduce using rule 2 (global_declaration_list -> global_declaration .)
    INT             reduce using rule 2 (global_declaration_list -> global_declaration .)
    FLOAT           reduce using rule 2 (global_declaration_list -> global_declaration .)
    TIMES           reduce using rule 2 (global_declaration_list -> global_declaration .)
    ID              reduce using rule 2 (global_declaration_list -> global_declaration .)
    $end            reduce using rule 2 (global_declaration_list -> global_declaration .)


state 4

    (4) global_declaration -> function_definition .

    VOID            reduce using rule 4 (global_declaration -> function_definition .)
    CHAR            reduce using rule 4 (global_declaration -> function_definition .)
    INT             reduce using rule 4 (global_declaration -> function_definition .)
    FLOAT           reduce using rule 4 (global_declaration -> function_definition .)
    TIMES           reduce using rule 4 (global_declaration -> function_definition .)
    ID              reduce using rule 4 (global_declaration -> function_definition .)
    $end            reduce using rule 4 (global_declaration -> function_definition .)


state 5

    (5) global_declaration -> declaration .

    VOID            reduce using rule 5 (global_declaration -> declaration .)
    CHAR            reduce using rule 5 (global_declaration -> declaration .)
    INT             reduce using rule 5 (global_declaration -> declaration .)
    FLOAT           reduce using rule 5 (global_declaration -> declaration .)
    TIMES           reduce using rule 5 (global_declaration -> declaration .)
    ID              reduce using rule 5 (global_declaration -> declaration .)
    $end            reduce using rule 5 (global_declaration -> declaration .)


state 6

    (6) function_definition -> declarator . declaration_list compound_statement
    (20) direct_declarator -> declarator .
    (8) declaration_list -> . declaration
    (9) declaration_list -> . declaration_list declaration
    (81) declaration -> . type_specifier init_declarator_list_opt SEMI
    (11) type_specifier -> . VOID
    (12) type_specifier -> . CHAR
    (13) type_specifier -> . INT
    (14) type_specifier -> . FLOAT

  ! shift/reduce conflict for VOID resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
    LBRACKET        reduce using rule 20 (direct_declarator -> declarator .)
    LPAREN          reduce using rule 20 (direct_declarator -> declarator .)
    VOID            shift and go to state 10
    CHAR            shift and go to state 11
    INT             shift and go to state 12
    FLOAT           shift and go to state 13

  ! VOID            [ reduce using rule 20 (direct_declarator -> declarator .) ]
  ! CHAR            [ reduce using rule 20 (direct_declarator -> declarator .) ]
  ! INT             [ reduce using rule 20 (direct_declarator -> declarator .) ]
  ! FLOAT           [ reduce using rule 20 (direct_declarator -> declarator .) ]

    declaration_list               shift and go to state 18
    declaration                    shift and go to state 19
    type_specifier                 shift and go to state 20

state 7

    (7) function_definition -> type_specifier . declarator declaration_list compound_statement
    (81) declaration -> type_specifier . init_declarator_list_opt SEMI
    (17) declarator -> . direct_declarator
    (18) declarator -> . pointer direct_declarator
    (82) init_declarator_list_opt -> . init_declarator_list
    (83) init_declarator_list_opt -> . empty
    (19) direct_declarator -> . identifier
    (20) direct_declarator -> . declarator
    (21) direct_declarator -> . direct_declarator LBRACKET constant_expression_opt RBRACKET
    (22) direct_declarator -> . direct_declarator LPAREN parameter_list RPAREN
    (23) direct_declarator -> . direct_declarator LPAREN identifier RPAREN
    (15) pointer -> . TIMES
    (16) pointer -> . TIMES pointer
    (84) init_declarator_list -> . init_declarator
    (85) init_declarator_list -> . init_declarator_list COMMA init_declarator
    (117) empty -> .
    (10) identifier -> . ID
    (86) init_declarator -> . declarator
    (87) init_declarator -> . declarator EQUALS initializer

    TIMES           shift and go to state 15
    SEMI            reduce using rule 117 (empty -> .)
    ID              shift and go to state 16

    declarator                     shift and go to state 21
    init_declarator_list_opt       shift and go to state 22
    direct_declarator              shift and go to state 8
    pointer                        shift and go to state 9
    init_declarator_list           shift and go to state 23
    empty                          shift and go to state 24
    identifier                     shift and go to state 14
    init_declarator                shift and go to state 25

state 8

    (17) declarator -> direct_declarator .
    (21) direct_declarator -> direct_declarator . LBRACKET constant_expression_opt RBRACKET
    (22) direct_declarator -> direct_declarator . LPAREN parameter_list RPAREN
    (23) direct_declarator -> direct_declarator . LPAREN identifier RPAREN

  ! shift/reduce conflict for LBRACKET resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
    VOID            reduce using rule 17 (declarator -> direct_declarator .)
    CHAR            reduce using rule 17 (declarator -> direct_declarator .)
    INT             reduce using rule 17 (declarator -> direct_declarator .)
    FLOAT           reduce using rule 17 (declarator -> direct_declarator .)
    EQUALS          reduce using rule 17 (declarator -> direct_declarator .)
    COMMA           reduce using rule 17 (declarator -> direct_declarator .)
    SEMI            reduce using rule 17 (declarator -> direct_declarator .)
    RPAREN          reduce using rule 17 (declarator -> direct_declarator .)
    LBRACKET        shift and go to state 26
    LPAREN          shift and go to state 27

  ! LBRACKET        [ reduce using rule 17 (declarator -> direct_declarator .) ]
  ! LPAREN          [ reduce using rule 17 (declarator -> direct_declarator .) ]


state 9

    (18) declarator -> pointer . direct_declarator
    (19) direct_declarator -> . identifier
    (20) direct_declarator -> . declarator
    (21) direct_declarator -> . direct_declarator LBRACKET constant_expression_opt RBRACKET
    (22) direct_declarator -> . direct_declarator LPAREN parameter_list RPAREN
    (23) direct_declarator -> . direct_declarator LPAREN identifier RPAREN
    (10) identifier -> . ID
    (17) declarator -> . direct_declarator
    (18) declarator -> . pointer direct_declarator
    (15) pointer -> . TIMES
    (16) pointer -> . TIMES pointer

    ID              shift and go to state 16
    TIMES           shift and go to state 15

    pointer                        shift and go to state 9
    direct_declarator              shift and go to state 28
    identifier                     shift and go to state 14
    declarator                     shift and go to state 29

state 10

    (11) type_specifier -> VOID .

    TIMES           reduce using rule 11 (type_specifier -> VOID .)
    ID              reduce using rule 11 (type_specifier -> VOID .)
    SEMI            reduce using rule 11 (type_specifier -> VOID .)
    RPAREN          reduce using rule 11 (type_specifier -> VOID .)


state 11

    (12) type_specifier -> CHAR .

    TIMES           reduce using rule 12 (type_specifier -> CHAR .)
    ID              reduce using rule 12 (type_specifier -> CHAR .)
    SEMI            reduce using rule 12 (type_specifier -> CHAR .)
    RPAREN          reduce using rule 12 (type_specifier -> CHAR .)


state 12

    (13) type_specifier -> INT .

    TIMES           reduce using rule 13 (type_specifier -> INT .)
    ID              reduce using rule 13 (type_specifier -> INT .)
    SEMI            reduce using rule 13 (type_specifier -> INT .)
    RPAREN          reduce using rule 13 (type_specifier -> INT .)


state 13

    (14) type_specifier -> FLOAT .

    TIMES           reduce using rule 14 (type_specifier -> FLOAT .)
    ID              reduce using rule 14 (type_specifier -> FLOAT .)
    SEMI            reduce using rule 14 (type_specifier -> FLOAT .)
    RPAREN          reduce using rule 14 (type_specifier -> FLOAT .)


state 14

    (19) direct_declarator -> identifier .

    VOID            reduce using rule 19 (direct_declarator -> identifier .)
    CHAR            reduce using rule 19 (direct_declarator -> identifier .)
    INT             reduce using rule 19 (direct_declarator -> identifier .)
    FLOAT           reduce using rule 19 (direct_declarator -> identifier .)
    LBRACKET        reduce using rule 19 (direct_declarator -> identifier .)
    LPAREN          reduce using rule 19 (direct_declarator -> identifier .)
    EQUALS          reduce using rule 19 (direct_declarator -> identifier .)
    COMMA           reduce using rule 19 (direct_declarator -> identifier .)
    SEMI            reduce using rule 19 (direct_declarator -> identifier .)
    RPAREN          reduce using rule 19 (direct_declarator -> identifier .)


state 15

    (15) pointer -> TIMES .
    (16) pointer -> TIMES . pointer
    (15) pointer -> . TIMES
    (16) pointer -> . TIMES pointer

    ID              reduce using rule 15 (pointer -> TIMES .)
    TIMES           reduce using rule 15 (pointer -> TIMES .)

  ! TIMES           [ shift and go to state 15 ]

    pointer                        shift and go to state 30

state 16

    (10) identifier -> ID .

    VOID            reduce using rule 10 (identifier -> ID .)
    CHAR            reduce using rule 10 (identifier -> ID .)
    INT             reduce using rule 10 (identifier -> ID .)
    FLOAT           reduce using rule 10 (identifier -> ID .)
    LBRACKET        reduce using rule 10 (identifier -> ID .)
    LPAREN          reduce using rule 10 (identifier -> ID .)
    EQUALS          reduce using rule 10 (identifier -> ID .)
    COMMA           reduce using rule 10 (identifier -> ID .)
    SEMI            reduce using rule 10 (identifier -> ID .)
    RPAREN          reduce using rule 10 (identifier -> ID .)
    TIMES           reduce using rule 10 (identifier -> ID .)
    DIVIDE          reduce using rule 10 (identifier -> ID .)
    MOD             reduce using rule 10 (identifier -> ID .)
    PLUS            reduce using rule 10 (identifier -> ID .)
    MINUS           reduce using rule 10 (identifier -> ID .)
    LT              reduce using rule 10 (identifier -> ID .)
    LE              reduce using rule 10 (identifier -> ID .)
    GT              reduce using rule 10 (identifier -> ID .)
    GE              reduce using rule 10 (identifier -> ID .)
    EQ              reduce using rule 10 (identifier -> ID .)
    NQ              reduce using rule 10 (identifier -> ID .)
    AND             reduce using rule 10 (identifier -> ID .)
    OR              reduce using rule 10 (identifier -> ID .)
    RBRACKET        reduce using rule 10 (identifier -> ID .)
    INCREASE        reduce using rule 10 (identifier -> ID .)
    DECREASE        reduce using rule 10 (identifier -> ID .)
    EQTIMES         reduce using rule 10 (identifier -> ID .)
    EQDIV           reduce using rule 10 (identifier -> ID .)
    EQMOD           reduce using rule 10 (identifier -> ID .)
    EQPLUS          reduce using rule 10 (identifier -> ID .)
    EQMINUS         reduce using rule 10 (identifier -> ID .)


state 17

    (3) global_declaration_list -> global_declaration_list global_declaration .
